# chainleash

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RUNBOOK.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml
backend/ChainLeash.Agent/: AgentWorker.cs  AllowlistStore.cs  AuditFeed.cs  BoundedSet.cs  CasperVault.cs  ChainLeash.Agent.csproj  ChainReader.cs  CoSignVerifier.cs  CommissionStore.cs  Dockerfile  OdraBytes.cs  OdraErrors.cs  Program.cs  RewardMath.cs  StakingPolicy.cs  StakingPositions.cs  StakingService.cs  ValidatorDirectory.cs  ValidatorMonitor.cs  ValidatorNames.cs  X402Client.cs  appsettings.json
backend/ChainLeash.Agent/Properties/: launchSettings.json
backend/ChainLeash.SignalProvider/: ChainLeash.SignalProvider.csproj  Dockerfile  Program.cs  appsettings.json
backend/ChainLeash.SignalProvider/Properties/: launchSettings.json
backend/ChainLeash.Tests/: ChainLeash.Tests.csproj  ChainReaderResilienceTests.cs  CoSignVerifierTests.cs  ObserverModeTests.cs  OdraBytesTests.cs  StakingPolicyTests.cs  StakingPositionsTests.cs  ValidatorNamesTests.cs
contracts/cosign-proof-session/: Cargo.toml
contracts/cosign-proof-session/src/: main.rs
contracts/governed_vault/: .gitignore  CHANGELOG.md  Cargo.toml  Odra.toml  README.md  deploy.sh
contracts/governed_vault/src/: governed_vault.rs  lib.rs
contracts/governed_vault/wasm/: GovernedVault.wasm
contracts/key-manager-session/: Cargo.toml
contracts/key-manager-session/src/: main.rs
contracts/overreach-session/: Cargo.toml  rust-toolchain.toml
contracts/overreach-session/src/: main.rs
docs/deploy/: authorized_keys.example
frontend/dashboard/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/dashboard/public/: site.webmanifest
frontend/dashboard/src/: index.html  styles.css  styles.scss
frontend/dashboard/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  wallet.service.spec.ts  wallet.service.ts
frontend/dashboard/src/app/ui/: deploy.component.ts  explainer.component.spec.ts  explainer.component.ts  guarantee.component.ts  hero.component.ts  how-it-works.component.ts  info.component.ts  nav-bar.component.ts  positions.component.spec.ts  (+3 more)
frontend/dashboard/tools/: gen-favicons.mjs
scripts/: deploy-server.sh  onboard.ps1  onboard.sh
spike/ChainLeash.Spike/: ChainLeash.Spike.csproj  Program.cs
spike/ChainLeash.Spike/Config/: settings.example.json
tools/odra-build/: Dockerfile
