[package]
edition = "2021"
name = "governed_vault"
version = "0.6.0"

[dependencies]
odra = { version = "2.7.0", features = [], default-features = false }

[dev-dependencies]
odra-test = { version = "2.7.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "2.7.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.7.0", features = [], default-features = false }

# Native Casper auction call for `redelegate` (Odra 2.7 doesn't wrap it). wasm-only;
# the OdraVM test backend uses a stub and the real path is verified on testnet.
[target.'cfg(target_arch = "wasm32")'.dependencies]
casper-contract = { version = "5.1", default-features = false }

[[bin]]
name = "governed_vault_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "governed_vault_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
